--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
   "extends": ["react-app", "react-app/jest", "standard", "prettier"],
-  "plugins": ["unused-imports"],
+  "plugins": ["simple-import-sort", "unused-imports"],
   "rules": {
-    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "no-unused-vars": "off",
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
     "unused-imports/no-unused-imports": "error",
     "unused-imports/no-unused-vars": [
       "warn",
