--- a/compose.yml
+++ b/compose.yml
@@ -4,5 +4,5 @@ services:
       context: .
     container_name: react-app
     ports:
-      - '127.0.0.1:$PORT:80'
-      - '[::1]:$PORT:80'
+      - '127.0.0.1:${PORT-3000}:80'
+      - '[::1]:${PORT-3000}:80'
