--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,11 @@ services:
   frontend:
     build:
       context: .
+      dockerfile: Dockerfile
     container_name: react-app
+    environment:
+      - CI=true
+      - NODE_ENV=production
     ports:
       - '127.0.0.1:${PORT-3000}:80'
       - '[::1]:${PORT-3000}:80'
