--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-config-standard": "^7.0.0",
@@ -32,6 +30,10 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.0"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
