--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "browserslist": {
     "production": [
